# docs/swagger.yaml
@@ -1,5 +1,24 @@
 basePath: /api/v1
 definitions:
+  dto.ProductDto:
+    properties:
+      description:
+        type: string
+      id:
+        type: integer
+      keywords:
+        type: string
+      photos:
+        items:
+          type: string
+        type: array
+      title:
+        type: string
+      urls:
+        items:
+          type: string
+        type: array
+    type: object
   entity.Category:
     properties:
       description:
@@ -18,9 +37,10 @@ definitions:
         maxLength: 30
         minLength: 3
         type: string
+      url:
+        type: string
     required:
     - description
-    - image
     - keywords
     - status
     - title
@@ -41,7 +61,6 @@ definitions:
         type: integer
     required:
     - comment
-    - ip
     - rate
     - status
     type: object
@@ -61,21 +80,6 @@ definitions:
     - answer
     - question
     - status
-    type: object
-  entity.Image:
-    properties:
-      contentId:
-        type: integer
-      image:
-        type: string
-      title:
-        maxLength: 50
-        minLength: 3
-        type: string
-      url:
-        type: string
-    required:
-    - title
     type: object
   entity.Message:
     properties:
@@ -169,6 +173,13 @@ definitions:
     - password
     - status
     - surname
+    type: object
+  response.SuccessResponse:
+    properties:
+      data: {}
+      message: {}
+      statusCode:
+        type: integer
     type: object
 host: localhost:3500
 info:
@@ -517,72 +528,7 @@ paths:
       summary: Update Data
       tags:
       - Faqs
-  /images:
-    get:
-      consumes:
-      - application/json
-      description: Get all images
-      parameters:
-      - description: Offset
-        in: query
-        name: offset
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/entity.Image'
-      summary: All  Data
-      tags:
-      - Images
-    post:
-      consumes:
-      - application/json
-      description: create Image
-      parameters:
-      - description: Image form
-        in: body
-        name: body
-        schema:
-          $ref: '#/definitions/entity.Image'
-      produces:
-      - application/json
-      responses:
-        "201":
-          description: Created
-          schema:
-            items:
-              $ref: '#/definitions/entity.Image'
-            type: array
-      summary: Create Data
-      tags:
-      - Images
   /images/{id}:
-    delete:
-      consumes:
-      - application/json
-      description: delete images
-      parameters:
-      - description: Image ID
-        in: path
-        name: id
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            items:
-              $ref: '#/definitions/entity.Image'
-            type: array
-      summary: Delete Data
-      tags:
-      - Images
     get:
       consumes:
       - application/json
@@ -599,33 +545,8 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/entity.Image'
+            $ref: '#/definitions/dto.ProductDto'
       summary: Show Data
-      tags:
-      - Images
-    put:
-      consumes:
-      - application/json
-      description: update images
-      parameters:
-      - description: images ID
-        in: path
-        name: id
-        required: true
-        type: string
-      - description: image update form
-        in: body
-        name: body
-        schema:
-          $ref: '#/definitions/entity.Image'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/entity.Image'
-      summary: Update Data
       tags:
       - Images
   /messages:
@@ -756,7 +677,9 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/entity.Product'
+            items:
+              $ref: '#/definitions/dto.ProductDto'
+            type: array
       summary: All  Data
       tags:
       - Products
@@ -776,9 +699,7 @@ paths:
         "201":
           description: Created
           schema:
-            items:
-              $ref: '#/definitions/entity.Product'
-            type: array
+            $ref: '#/definitions/entity.Product'
       summary: Create Data
       tags:
       - Products
@@ -799,12 +720,11 @@ paths:
         "200":
           description: OK
           schema:
-            items:
-              $ref: '#/definitions/entity.Product'
-            type: array
+            $ref: '#/definitions/response.SuccessResponse'
       summary: Delete Data
       tags:
       - Products
+  /products/{id}/images/{imagesId}:
     put:
       consumes:
       - application/json
